--- a/package.json
+++ b/package.json
@@ -1,39 +1,19 @@
 {
-  "name": "webpack-base",
-  "version": "1.0.0",
-  "description": "",
-  "main": "webpack.config.js",
+  "name": "pretty-xml-demo-page",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "test": "webpack --mode development",
-    "dev": "webpack-dev-server --mode development --open",
-    "build": "webpack --mode production"
-  },
-  "author": "Amfeon",
-  "license": "ISC",
-  "browserslist": [
-    "> 1%",
-    "last 3 version"
-  ],
-  "devDependencies": {
-    "@babel/core": "^7.8.4",
-    "@babel/preset-env": "^7.8.4",
-    "autoprefixer": "^9.7.4",
-    "babel-loader": "^8.0.6",
-    "copy-webpack-plugin": "^5.1.1",
-    "css-loader": "^3.4.2",
-    "css-mqpacker": "^7.0.0",
-    "cssnano": "^4.1.10",
-    "file-loader": "^5.1.0",
-    "html-webpack-plugin": "^3.2.0",
-    "mini-css-extract-plugin": "^0.9.0",
-    "postcss-loader": "^3.0.0",
-    "sass-loader": "^8.0.2",
-    "style-loader": "^1.1.3",
-    "webpack": "^4.41.6",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "sass": "^1.52.3"
+    "pretty-xml-vue3": "^1.0.2",
+    "vue": "^3.5.13"
+  },
+  "devDependencies": {
+    "@vitejs/plugin-vue": "^5.2.1",
+    "vite": "^6.0.5"
   }
 }
